kubernetes/ingress/first-app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: first-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: first
  template:
    metadata:
      labels:
        app: first
    spec:
      containers:
        - name: first-container
          image: nigelpoulton/k8sbook:shield-ingress
          ports:
            - containerPort: 8080
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: svc-first
spec:
  type: ClusterIP
  selector:
    app: first
  ports:
    - port: 8080
      targetPort: 8080
